<resources>
    <string name="app_name">MHealth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_search">جستجو</string>
    <string name="lbl_username">نام کاربری</string>
    <string name="lbl_password">کلمه عبور</string>
    <string name="lbl_password_confirm">تکرار رمز عبور</string>
    <string name="lbl_email">آدرس ایمیل</string>
    <string name="lbl_phone">شماره تماس</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_firstname">نام</string>
    <string name="lbl_surname">نام خانوادگی</string>
    <string name="lbl_phone_number">شماره تلفن</string>
    <string name="lbl_nat_id">National ID</string>
    <string name="lbl_birth_place">Birth Place</string>
    <string name="lbl_academic_degree">Academic Degree</string>
    <string name="lbl_validated">Validated</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_date_from">from</string>
    <string name="lbl_date_to">to</string>
    <string name="lbl_text">Text</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_rial">Rials</string>
    <string name="lbl_kbps">kbps</string>
    <string name="lbl_no_patient">No Patient Selected</string>
    <string name="lbl_unit">Unit</string>
    <string name="lbl_ecg">ECG</string>
    <string name="lbl_pcg">PCG</string>
    <string name="lbl_spo2">SPO2</string>
    <string name="lbl_resp">Resp</string>
    <string name="lbl_nibp">NIBP</string>
    <string name="lbl_ibp">IBP</string>
    <string name="lbl_co2">CO2</string>
    <string name="lbl_temp">Temp</string>
    <string name="lbl_temperature">Temperature</string>
    <string name="lbl_glucose">Glucose</string>
    <string name="lbl_med_image">Medical Image</string>
    <string name="lbl_lipids">Lipids</string>
    <string name="lbl_alarm_settings">Alarm Settings</string>
    <string name="lbl_lead_1">I</string>
    <string name="lbl_lead_2">II</string>
    <string name="lbl_lead_3">III</string>
    <string name="lbl_lead_4">aVR</string>
    <string name="lbl_lead_5">aVL</string>
    <string name="lbl_lead_6">aVF</string>
    <string name="lbl_lead_7">V</string>
    <string name="lbl_wire_f">F</string>
    <string name="lbl_wire_l">L</string>
    <string name="lbl_wire_r">R</string>
    <string name="lbl_wire_c">C</string>
    <string name="lbl_wire_n">N</string>
    <string name="lbl_heartrate">HR (/min)</string>
    <string name="lbl_ecg_pace">Pace Mark</string>
    <string name="lbl_pace_on">Pace On</string>
    <string name="lbl_pace_off">Pace Off</string>
    <string name="lbl_lead_failure">Lead Failure</string>
    <string name="lbl_ecg_cable">ECG Cable</string>
    <string name="lbl_ecg_sweep">Sweep Speed</string>
    <string name="lbl_ecg_gain">ECG Gain</string>
    <string name="lbl_ecg_notch">Notch Filter</string>
    <string name="lbl_ecg_timing">Record Duration</string>
    <string name="lbl_ecg_filter">Filter Mode</string>
    <string name="lbl_ecg_hr">Heart Rate</string>
    <string name="lbl_spo2_percent">Spo2 (%)</string>
    <string name="lbl_spo2_pr">PR (/min)</string>
    <string name="lbl_spo2_settings_sensitivity">Sensitivity</string>
    <string name="btn_spo2_settings_sensitivity_Normal">Normal</string>
    <string name="btn_spo2_settings_sensitivity_High">High</string>
    <string name="btn_spo2_settings_pulse_alarm">SPO2 Pulse Rate Alarm Settings</string>
    <string name="btn_spo2_settings_percent_alarm">SPO2 Percentage Alarm Settings</string>
    <string name="lbl_ecg_filter_monitor">Mon.</string>
    <string name="lbl_ecg_filter_surgery">Sur.</string>
    <string name="lbl_ecg_filter_extended">Ext.</string>
    <string name="lbl_resperation_settings_respgain">Resp Gain</string>
    <string name="lbl_resperation_settings_resplead">Resp Lead</string>
    <string name="btn_resperation_settings_respgain_default">0.25</string>
    <string name="btn_resperation_settings_resplead_default">I</string>
    <string name="lbl_pressure_unit">mmHg</string>
    <string name="lbl_ibp1">IBP1 (mmHg)</string>
    <string name="lbl_ibp2">IBP2 (mmHg)</string>
    <string name="lbl_ibp_sys1">IBP1 Systolic</string>
    <string name="lbl_ibp_sys2">IBP2 Systolic</string>
    <string name="lbl_ibp_dias1">IBP1 Diastolic</string>
    <string name="lbl_ibp_dias2">IBP2 Diastolic</string>
    <string name="lbl_systole">Systole</string>
    <string name="lbl_diastol">Diastole</string>
    <string name="lbl_mean">Mean</string>
    <string name="lbl_respiration">Respiration</string>
    <string name="lbl_resp_title">RR (/min)</string>
    <string name="lbl_prepare">Prepare</string>
    <string name="lbl_pressurize">Pressurize</string>
    <string name="lbl_measure">Measure</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_nibp_separator">/</string>
    <string name="lbl_nibp_sys">Systolic</string>
    <string name="lbl_nibp_dias">Diastolic</string>
    <string name="lbl_nibp_mode">Mode</string>
    <string name="lbl_nibp_instruction">Wind blood pressure cuff and press Start</string>
    <string name="lbl_nibp_instruction_long">Wind the cuff around bare skin and raise it level with the heart</string>
    <string name="lbl_co2_exp">EtCO2 (mm Hg)</string>
    <string name="lbl_co2_insp">FiCO2 (mm Hg)</string>
    <string name="lbl_co2_rr">Respiration Rate (BrPM)</string>
    <string name="lbl_co2_scale">CO2 Scale</string>
    <string name="lbl_co2_oxygen">Oxygen Concentration (%)</string>
    <string name="lbl_co2_n2o">N2O Concentration (%)</string>
    <string name="lbl_co2_apnea">Apnea Time</string>
    <string name="lbl_co2_expired">EtCO2</string>
    <string name="lbl_co2_inspired">FiCO2</string>
    <string name="lbl_co2_message_1">Apnea</string>
    <string name="lbl_co2_message_3">Replace O2 Sensor</string>
    <string name="lbl_co2_message_4">Check Adapter</string>
    <string name="lbl_co2_message_5">Parameter Out of Range</string>
    <string name="lbl_co2_message_6">Sensor Error</string>
    <string name="lbl_co2_message_7">Room O2 Calibration Required</string>
    <string name="lbl_temp1">Temperature 1</string>
    <string name="lbl_temp2">Temperature 2</string>
    <string name="lbl_temp_delta">ΔT</string>
    <string name="lbl_temp_unit">°C</string>
    <string name="lbl_glucose_date">Date</string>
    <string name="lbl_glucose_time">Time</string>
    <string name="lbl_glucose_value">Value</string>
    <string name="lbl_glucose_val">Glucose Value</string>
    <string name="lbl_glucose_hypoglycemia">Hypoglycemia</string>
    <string name="lbl_lipids_date">Date</string>
    <string name="lbl_lipids_time">Time</string>
    <string name="lbl_lipids_chol">Chol</string>
    <string name="lbl_lipids_hdl">HDL</string>
    <string name="lbl_lipids_ldl">LDL</string>
    <string name="lbl_lipids_tc">TC</string>
    <string name="lbl_lipids_tg">TG</string>
    <string name="lbl_pcg_filename">File Name:</string>
    <string name="lbl_pcg_duration">Record Duration</string>
    <string name="lbl_medimage_naming">Default Image Naming Scheme</string>
    <string name="lbl_medimage_camera">Camera</string>
    <string name="lbl_medimage_memory">Storage Memory</string>
    <string name="lbl_patient_fullname">Full Name</string>
    <string name="lbl_patient_age">Age</string>
    <string name="lbl_patient_national_id">National ID</string>
    <string name="lbl_patient_status">Validation</string>
    <string name="lbl_patient_gender">Gender</string>
    <string name="lbl_patient_prescription">Prescription</string>
    <string name="lbl_call_established">Call established with</string>
    <string name="lbl_call_incoming">Incoming call from</string>
    <string name="lbl_call_dialing">Calling</string>
    <string name="lbl_call_duration">Call Duration:</string>
    <string name="lbl_ngn_display_name">Display Name</string>
    <string name="lbl_ngn_public_id">Public Identity</string>
    <string name="lbl_ngn_private_id">Private Identity</string>
    <string name="lbl_ngn_realm">Realm</string>
    <string name="lbl_ngn_3gpp_ims">3GPP Early IMS Security</string>
    <string name="lbl_ngn_wifi">Enable WiFi</string>
    <string name="lbl_ngn_4g3g2g">Enable 4G/3G/2.5G</string>
    <string name="lbl_ngn_sigcomp">Enable SigComp</string>
    <string name="lbl_ngn_cscf_host">Host Address</string>
    <string name="lbl_ngn_cscf_port">Host Port</string>
    <string name="lbl_ngn_transport">Protocol</string>
    <string name="lbl_ngn_video_size">Video Size</string>
    <string name="lbl_ngn_cscf_discovery">Proxy-CSCF Discovery</string>
    <string name="lbl_net_addressing">Addressing</string>
    <string name="lbl_net_ip_address">IP Address</string>
    <string name="lbl_net_subnet">Subnet Mask</string>
    <string name="lbl_net_gateway">Gateway</string>
    <string name="lbl_net_dns">DNS</string>
    <string name="lbl_net_networks">Networks:</string>
    <string name="lbl_datetime_timezone">Time Zone</string>
    <string name="lbl_datetime_time">Time</string>
    <string name="lbl_datetime_date">Date</string>
    <string name="lbl_display_timeout">Turn off display after</string>
    <string name="lbl_display_brightness">Brightness</string>
    <string name="lbl_bluetooth_devices">Devices:</string>
    <string name="lbl_ethernet">Ethernet</string>
    <string name="lbl_wifi">WiFi</string>
    <string name="lbl_bluetooth">Bluetooth</string>
    <string name="lbl_ipv4">IPv4</string>
    <string name="lbl_ipv6">IPv6</string>
    <string name="lbl_udp">UDP</string>
    <string name="lbl_tcp">TCP</string>
    <string name="lbl_tls">TLS</string>
    <string name="lbl_trial">توجه!\n\n
        نسخه شماره 21125\n\n
        این نسخه توسط شرکت رایان هیوا در حال توسعه بوده و ایرادات احتمالی آن بر عهده استفاده کننده می باشد</string>
    <string name="lbl_recorder_instruction_1">Select the graphs to print:</string>
    <string name="lbl_recorder_instruction_2">Print settings:</string>
    <string name="lbl_recorder_line1">Line 1</string>
    <string name="lbl_recorder_line2">Line 2</string>
    <string name="lbl_recorder_patient_info">Patient Information</string>
    <string name="lbl_recorder_vital_signs">Vital Sign Parameters</string>
    <string name="lbl_recorder_lab_params">Laboratory Parameters</string>
    <string name="lbl_recorder_comments">Comments</string>
    <string name="lbl_recorder_grid">Display Grid</string>
    <string name="lbl_gps_lat">Latitude:</string>
    <string name="lbl_gps_long">Longitude:</string>
    <string name="lbl_gps_speed">Speed:</string>
    <string name="lbl_gps_sat">Satellites:</string>
    <string name="lbl_gps_sog">SoG:</string>
    <string name="lbl_gps_cog">CoG:</string>
    <string name="lbl_gprs_title">GPRS:</string>
    <string name="lbl_gprs_status">Status:</string>
    <string name="lbl_gprs_send">Send Rate:</string>
    <string name="lbl_signin_not_member">عضو نیستید؟ ایجاد حساب جدید</string>
    <string name="lbl_signin_forgot_password">رمز عبورم را فراموش کردم</string>
    <string name="lbl_password_recovery_resend">رمز را دریافت نکردید؟</string>
    <string name="btn_signin">ورود</string>
    <string name="btn_submit">ثبت اطلاعات</string>
    <string name="btn_password_recovery_send">ارسال رمز عبور</string>
    <string name="pref_title_configs">Settings</string>
    <string name="pref_title_private_identity">Private ID</string>
    <string name="pref_title_public_identiy">Public ID</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_CSCFHost">CSCF Host</string>
    <string name="pref_title_port">CSCF Port</string>
    <string name="pref_title_network_realm">Realm</string>
    <string name="pref_title_qos_video_size">Video QOS</string>
    <string name="pref_title_nework_protocol">Network Protocol</string>
</resources>