<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="org.ertebat.ui.SignInActivity" >

    <LinearLayout
        android:id="@+id/layoutSignInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editSignInUsername"
            android:layout_width="@dimen/sign_in_edit_width"
            android:layout_height="@dimen/sign_in_edit_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_default"
            android:gravity="center"
            android:hint="@string/lbl_username"
            android:inputType="number"
            android:maxLength="16"
            android:textColor="#000"
            android:textSize="@dimen/generic_edit_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSignInPassword"
            android:layout_width="@dimen/sign_in_edit_width"
            android:layout_height="@dimen/sign_in_edit_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/generic_item_margin"
            android:background="@drawable/edit_default"
            android:gravity="center"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="#000"
            android:textSize="@dimen/generic_edit_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignInEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/generic_btn_padding"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/sign_in_vertical_margin"
            android:background="@drawable/style_btn_yellow"
            android:includeFontPadding="false"
            android:text="@string/btn_signin"
            android:textColor="#000"
            android:textSize="@dimen/generic_label_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblSignInNotMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sign_in_vertical_margin"
            android:clickable="true"
            android:text="@string/lbl_signin_not_member"
            android:textColor="@color/color_text_link"
            android:textSize="@dimen/generic_label_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblSignInForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sign_in_vertical_margin"
            android:clickable="true"
            android:text="@string/lbl_signin_forgot_password"
            android:textColor="@color/color_text_link"
            android:textSize="@dimen/generic_label_text_size"
            android:textStyle="bold" />
    </LinearLayout>
    
    <View
        android:id="@+id/viewSignInHidden"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutSignInMain" />

</RelativeLayout>
