<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="org.ertebat.ui.PasswordRecoveryActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editPasswordRecoveryPhoneNumber"
            android:layout_width="@dimen/sign_in_edit_width"
            android:layout_height="@dimen/sign_in_edit_height"
            android:background="@drawable/edit_default"
            android:gravity="center"
            android:hint="@string/lbl_phone_number"
            android:inputType="phone"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="@dimen/generic_edit_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPasswordRecoveryResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sign_in_vertical_margin"
            android:text="@string/lbl_password_recovery_resend"
            android:textColor="#000"
            android:textSize="@dimen/generic_label_text_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnPasswordRecoverySend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/generic_btn_padding"
            android:layout_marginTop="@dimen/sign_in_vertical_margin"
            android:background="@drawable/style_btn_yellow"
            android:text="@string/btn_password_recovery_send"
            android:textColor="#000"
            android:textSize="@dimen/generic_btn_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
